--- a/Website Files/styles/style.css
+++ b/Website Files/styles/style.css
@@ -184,3 +184,17 @@ body {
 .CCC_bg_color {
     background-color: #ffffff;
 }
+table {  font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid white;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: white;
+  }
